# memory-graph-workshop

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json
.devcontainer/: README.md  devcontainer.json  setup.sh
backend/: .env.example  .gitignore  MCP_INTEGRATION.md  example_vector_search.py  initialize_sample_data.py  pyproject.toml  requirements.txt  setup_preferences_db.py  test_api_vector_search.py  test_entity_extraction.py  test_geospatial_time_search.py  test_message_relationships.py  test_procedural_memory.py  test_schema_tools.py  test_vector_search.py  update_preference_embeddings.py
backend/app/: agent.py  entity_extractor.py  geocoding_client.py  main.py  memory_provider.py  neo4j_client.py  preferences_client.py  procedural_memory_client.py  sessions_client.py
exercises/: 0_intro_cypher.md
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  MemoryGraphView.tsx  Sidebar.tsx
frontend/components/ui/: provider.tsx
frontend/lib/: api.ts  system.ts
